@@ -117,6 +117,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Improve visibility of scheduled publishing errors in status side panel (Sage Abdullah)
  * Prevent 'choose' permission from being ignored when looking up 'choose', 'edit' and 'delete' permissions in combination (Sage Abdullah)
  * Take user's permissions into account for image / document counts on the admin dashboard (Sage Abdullah)
+ * Avoid N+1 queries in users index view (Tidiane Dia)
 
 ### Documentation
 
