@@ -60,6 +60,7 @@ Changelog
  * Fix: Improve visibility of scheduled publishing errors in status side panel (Sage Abdullah)
  * Fix: Prevent 'choose' permission from being ignored when looking up 'choose', 'edit' and 'delete' permissions in combination (Sage Abdullah)
  * Fix: Take user's permissions into account for image / document counts on the admin dashboard (Sage Abdullah)
+ * Fix: Avoid N+1 queries in users index view (Tidiane Dia)
  * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
  * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
  * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
